RSA Algorithm Project

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             <div class="m-8">
                 <div class="px-4 sm:px-0">
                     <h3 class="text-base/7 font-semibold text-gray-900">APLIKASI RSA ENKRIPSI DAN DEKRIPSI</h3>
+                    <h3 class="text-sm font-semibold text-gray-900">Kelompok 4</h3>
+                    <br>
                     <p class="mt-1 max-w-2xl text-sm/6 text-gray-500">Generate Public Key & Private Key</p>
                 </div>
 
