RSA Algorithm Project

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             }
         }
     </script>
-    <title>Enkripsi RSA Sederhana</title>
+    <title>Enkripsi & Dekripsi RSA</title>
 </head>
 
 <body>
