--- a/index.html
+++ b/index.html
@@ -90,8 +90,24 @@
                                 autocomplete="off" placeholder="Masukkan bilangan prima kedua">
                             </dd>
                         </div>
+                        <div id="e-selection" style="display: none;">
+                            <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
+                                <dt class="text-sm/6 font-medium text-gray-900"><label for="e-select">Nilai e</label></dt>
+                                <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">
+                                    <div class="flex gap-5">
+                                        <select name="e-select" id="e-select"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                                        autocomplete="off" placeholder="Masukkan bilangan prima kedua"></select>
+                                        <button onclick="finalizeKeys()"
+                                            class="text-white w-fit items-center bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+                                            Select
+                                        </button>
+                                    </div>
+                                </dd>
+                            </div>
+                        </div>
                         
-                        <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
+                        <div class="key-display px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
                             <dt class="hidden sm:inline text-sm/6 font-medium text-gray-900">
                                 <ul role="list" class="divide-y divide-gray-100 rounded-md border border-gray-200">
                                     <li class="flex items-center justify-between py-4 pl-4 pr-5 text-sm/6">
